--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "vite": "^7.0.0"
   },
   "dependencies": {
-    "page": "^1.11.6"
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/cli": "^2.6.2",
+    "@tauri-apps/plugin-fs": "^2.4.0",
+    "@tauri-apps/plugin-process": "^2.3.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
+    "install": "^0.13.0",
+    "npm": "^11.4.2",
+    "page": "^1.3.7"
   }
 }
